# logo-tracer

./: .gitignore  README.md
.claude/skills/logo-tracer/: CHECKLISTS.md  SKILL.md
.claude/skills/logo-tracer/references/: bezier-primer.md  drawing-good-paths.md  material-icon-design.md  optical-corrections.md
.claude/skills/logo-tracer/scripts/: quality_gate.js
.claude/skills/logo-tracer/specs/: corners.md  extrema.md  fitting.md  keylines.md  lines.md  optical.md  palette-masks.md  pipeline-map.md  primitives.md
docs/: LOCAL_SETUP.md
docs/refs/: bezier-method-ac.md  bezier-vectorize-logo.md  circle-technique.md
logo-wasm/: Cargo.toml
logo-wasm/src/: lib.rs
logo-wasm/src/logo/: arc.rs  fit.rs  mod.rs
refrense/: ANALYSIS.md
tools/svg-metrics/: index.js  package.json
web/: README.md  app.js  index.html
web/pkg/: logo_wasm.d.ts  logo_wasm.js  logo_wasm_bg.wasm
